src/objects/VIDSigner_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>Aviso_de_privacidad__c</fullName>
        <label>Aviso de privacidad</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CertificateGUI__c</fullName>
        <label>CertificateGUI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correo_administrador__c</fullName>
        <label>Correo administrador</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Es_productivo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Es productivo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDF_Empresas__c</fullName>
        <label>PDF_Empresas</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDF_Particular__c</fullName>
        <label>PDF_Particular</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pin__c</fullName>
        <label>Pin</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SignatureType__c</fullName>
        <label>SignatureType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_de_Notificaciones__c</fullName>
        <label>URL de Notificaciones</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>environment__c</fullName>
        <label>environment</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscription_pass__c</fullName>
        <label>subscription_pass</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscription_user__c</fullName>
        <label>subscription_user</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>VIDSigner Configuración</label>
    <pluralLabel>VIDSigner Configuraciones</pluralLabel>
</CustomObject>